# HongJieRec

./: .gitignore  README.md
scripts/: error.py  etl.py  experiment.sh  train.sh
src/: utils.py
src/cpp_pkg/CharConv/: CharConv.h
src/cpp_pkg/cpp_frame/: feature_frame.h
src/cpp_pkg/cpp_str/: dump_str.h  parse_str.h
src/cpp_pkg/cpp_tfrecord/: coding.cpp  coding.h  crc32c.cpp  crc32c.h  crc32c_accelerate.cpp  dump_tfrecord.h  example.pb.cc  example.pb.h  feature.pb.cc  feature.pb.h  record_writer.cpp  record_writer.h
src/cpp_pkg/fast_float/: fast_float.h
src/feature/: feature_main.py  run.sh
src/rank/data_process/: CMakeLists.txt  main.cpp  run.sh
src/rank/data_process/src/: FeatureProfile.h  FeatureStruct.h
src/rank/data_process/src/FeatureOps/: FeatureOps.h  MatchOp.h  ProductOp.h  SequenceOp.h  StatOp.h  TimeOp.h
src/rank/tf_rank/: EstimatorDataOp.py  eval.cpp  feature_columns.py  nn_infer.py  nn_train.py  run.sh
src/rank/tf_rank/ModelZoo/WideTrmMTL1/: feature_operators.py  model_fn.py  tf_attention.py  tf_layer.py
src/rank/tf_rank/ModelZoo/WideTrmMTL2/: tf_layer.py
src/rank/tf_rank/ModelZoo/base/: feature_operators.py  model_fn.py  tf_attention.py  tf_layer.py  tf_rnn.py
src/rank/tf_rank/tmp/: tf_conf.py
